--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
   <div class="dialogue-box">
     <p id="customMessage">
       Hey Anushka,<br><br>
-      I love you so much jaan, and I'm very very grateful to have you in my life. You are my everything, and I can't wait to spend this Valentine's Day with you. ❤️<br><br>
+      I love you so much, and I'm very very grateful to have you in my life. You are my everything, and I can't wait to spend this Valentine's Day with you. ❤️<br><br>
       Love,<br>
-      [Your Name]
+      Shreyas
     </p>
   </div>
 
