--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
     <div class="petal"></div>
   </div>
 
-  <h1>Anushka, will you be my Valentine?</h1>
+  <h1>Anushka Ranjan, will you be my Valentine?</h1>
   <button id="yesButton">Yes</button>
   <button id="noButton">No</button>
 
   <!-- Dialogue Box -->
   <div class="dialogue-box">
     <p id="customMessage">
-      Hey Anushka,<br><br>
+      <br><br>
       I love you so much, and I'm very very grateful to have you in my life. You are my everything, and I can't wait to spend this Valentine's Day with you. ❤️<br><br>
       Love,<br>
       Shreyas
@@ -260,7 +260,7 @@
       noButton.style.top = `${randomY}px`;
 
       // Increase the size of the "Yes" button faster
-      yesButtonFontSize += 0.4; // Increment font size more aggressively
+      yesButtonFontSize += 0.5; // Increment font size more aggressively
       yesButton.style.fontSize = `${yesButtonFontSize}rem`;
     }
 
