--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       height: 100vh;
       overflow: hidden;
       position: relative;
-      background: url('https://img.freepik.com/free-vector/hand-drawn-background-valentines-day-celebration_23-2151174484.jpg') no-repeat center center/cover;
+      background: url('https://images.unsplash.com/photo-1503455637927-730bce8583c0?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cGluayUyMHdhbGxwYXBlcnxlbnwwfHwwfHx8MA%3D%3D') no-repeat center center/cover;
+      transition: background 1s ease-in-out;
     }
 
     h1 {
@@ -36,7 +37,7 @@
       border-radius: 5px;
       cursor: pointer;
       margin: 10px;
-      transition: transform 0.2s ease-in-out, font-size 0.2s ease-in-out;
+      transition: transform 0.2s ease-in-out;
       z-index: 2;
     }
 
@@ -197,6 +198,47 @@
         opacity: 0;
       }
     }
+
+    /* YAYY GIF */
+    .yayy-container {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      text-align: center;
+    }
+
+    .yayy-gif {
+      width: 300px;
+      height: 300px;
+    }
+
+    .yayy-text {
+      font-size: 2.5rem;
+      color: #8B0000; /* Deep red */
+      margin-top: 10px;
+    }
+
+    /* Show Message Button */
+    .show-message-button {
+      display: none;
+      margin-top: 50px; /* Lowered the button */
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #f4d03f;
+      color: #e74c3c;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .show-message-button:hover {
+      background-color: #e74c3c;
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -226,17 +268,22 @@
     <div class="petal"></div>
   </div>
 
-  <h1>Anushka Ranjan, will you be my Valentine?</h1>
+  <h1>Anushka, will you be my Valentine?</h1>
   <button id="yesButton">Yes</button>
   <button id="noButton">No</button>
+
+  <!-- YAYY GIF Container -->
+  <div class="yayy-container">
+    <img src="https://media.tenor.com/TEC6z0acIbUAAAAj/cute-bears-love.gif" alt="YAYY" class="yayy-gif">
+    <div class="yayy-text">YAYY</div>
+    <button class="show-message-button">Show Hidden Message</button>
+  </div>
 
   <!-- Dialogue Box -->
   <div class="dialogue-box">
     <p id="customMessage">
-      <br><br>
-      I love you so much, and I'm very very grateful to have you in my life. You are my everything, and I can't wait to spend this Valentine's Day with you. ❤️<br><br>
-      Love,<br>
-      Shreyas
+      Hey Babyyy,<br><br>
+     I love you so much jaan. You mean everything to me, and I can't imagine my life without you in it. You're my favorite person in every way. You make me the happiest and I just love spending time with you even if we're doing nothing. Just being with you soothes my inner child, you bring me a sense of comfort that I've always begged for, you are healing the wounds which were so deep that they had almost become a part of my personality. I love you so much baby and I'm really really grateful and lucky to have you by my side.  ❤️<br><br>
     </p>
   </div>
 
@@ -244,10 +291,11 @@
     const noButton = document.getElementById('noButton');
     const yesButton = document.getElementById('yesButton');
     const dialogueBox = document.querySelector('.dialogue-box');
+    const yayyContainer = document.querySelector('.yayy-container');
+    const showMessageButton = document.querySelector('.show-message-button');
+    const body = document.body;
 
-    let yesButtonFontSize = 1.2; // Initial font size of the "Yes" button
-
-    // Function to move the "No" button randomly
+    // Function to move the "No" button randomly and spawn new "Yes" buttons
     function moveNoButton() {
       const windowHeight = window.innerHeight;
       const windowWidth = window.innerWidth;
@@ -259,17 +307,70 @@
       noButton.style.left = `${randomX}px`;
       noButton.style.top = `${randomY}px`;
 
-      // Increase the size of the "Yes" button faster
-      yesButtonFontSize += 0.6; // Increment font size more aggressively
-      yesButton.style.fontSize = `${yesButtonFontSize}rem`;
+      // Spawn new "Yes" buttons
+      for (let i = 0; i < 5; i++) {
+        const newYesButton = document.createElement('button');
+        newYesButton.className = 'newYesButton';
+        newYesButton.textContent = 'Yes';
+        newYesButton.style.position = 'absolute';
+        newYesButton.style.left = `${Math.random() * (windowWidth - 100)}px`;
+        newYesButton.style.top = `${Math.random() * (windowHeight - 50)}px`;
+        newYesButton.style.backgroundColor = '#2ecc71';
+        newYesButton.style.color = 'white';
+        newYesButton.style.border = 'none';
+        newYesButton.style.borderRadius = '5px';
+        newYesButton.style.cursor = 'pointer';
+        newYesButton.style.padding = '10px 20px';
+        newYesButton.style.fontSize = '1.2rem';
+        newYesButton.style.transition = 'transform 0.2s ease-in-out';
+
+        newYesButton.addEventListener('click', () => {
+          showYayyGif();
+        });
+
+        document.body.appendChild(newYesButton);
+      }
     }
 
     // Add event listeners to detect mouse movement near the "No" button
     noButton.addEventListener('mouseenter', moveNoButton);
 
-    // Happy Animation on Clicking "Yes"
-    yesButton.addEventListener('click', () => {
+    // Function to show the YAYY GIF
+    function showYayyGif() {
+      // Change the background to the new image
+      body.style.backgroundImage = 'url("https://d1csarkz8obe9u.cloudfront.net/posterpreviews/backgrounds%2Cvalentines-backgrounds-design-template-86335df22137aa1d49f7bc4d36a599bd_screen.jpg?ts=1637025804")';
+
+      // Hide the initial content
+      document.querySelector('h1').style.display = 'none';
+      yesButton.style.display = 'none';
+      noButton.style.display = 'none';
+
+      // Remove existing "Yes" buttons
+      const newYesButtons = document.querySelectorAll('.newYesButton');
+      newYesButtons.forEach(button => button.remove());
+
+      // Show the YAYY GIF container
+      yayyContainer.style.display = 'flex';
+      yayyContainer.style.flexDirection = 'column';
+      yayyContainer.style.alignItems = 'center';
+      showMessageButton.style.display = 'block';
+
+      // Ensure the GIF is visible
+      const gif = document.querySelector('.yayy-gif');
+      gif.style.display = 'block';
+
       // Show Confetti
+      showConfetti();
+    }
+
+    // Function to show the personalized message
+    function showCustomMessage() {
+      yayyContainer.style.display = 'none';
+      dialogueBox.style.display = 'block';
+    }
+
+    // Function to show confetti
+    function showConfetti() {
       const body = document.body;
       for (let i = 0; i < 300; i++) { // Increased number of confetti
         const confetti = document.createElement('div');
@@ -283,12 +384,22 @@
           confetti.remove();
         }, 5000);
       }
+    }
 
-      // Show Dialogue Box After 1 Second
-      setTimeout(() => {
-        dialogueBox.style.display = 'block';
-      }, 1000);
+    // Happy Animation on Clicking "Yes"
+    yesButton.addEventListener('click', () => {
+      showYayyGif();
     });
+
+    // Event listeners for new "Yes" buttons
+    document.addEventListener('click', (event) => {
+      if (event.target.classList.contains('newYesButton')) {
+        showYayyGif();
+      }
+    });
+
+    // Event listener for the "Show Hidden Message" button
+    showMessageButton.addEventListener('click', showCustomMessage);
   </script>
 </body>
 </html>
